cli/src/commands/snapshots/trolley__commands__common__tests__environment_env_file_overridden_by_variables.snap
---
source: src/commands/common.rs
assertion_line: 544
expression: "String::from_utf8(result).unwrap()"
---
FOO=from_manifest
LANG=C.UTF-8
LC_ALL=C.UTF-8
