cli/src/commands/snapshots/trolley__commands__common__tests__environment_env_file_overrides_defaults.snap
---
source: src/commands/common.rs
assertion_line: 554
expression: "String::from_utf8(result).unwrap()"
---
LANG=en_GB.UTF-8
LC_ALL=C.UTF-8
