cli/src/commands/snapshots/trolley__commands__common__tests__environment_variables_override_defaults.snap
---
source: src/commands/common.rs
assertion_line: 520
expression: "String::from_utf8(result).unwrap()"
---
LANG=en_US.UTF-8
LC_ALL=C.UTF-8
