cli/src/commands/snapshots/trolley__commands__common__tests__environment_with_env_file.snap
---
source: src/commands/common.rs
assertion_line: 530
expression: "String::from_utf8(result).unwrap()"
---
LANG=C.UTF-8
LC_ALL=C.UTF-8
MY_VAR=hello
OTHER=world
